build: support JDK 8 for runtime and CLI modules
Intranet Java estates are still largely on JDK 8, so all modules
running on the user's JVM (core, recorder, storage-sqlite, CLI)
now compile with --release 8; only the Spring AI SDK line stays
on 17 as Spring AI requires. The replay client moves to the CLI
module on HttpURLConnection, Disruptor drops to the last Java 8
line, and adapter modules get version-suffixed names
(sdk-spring-ai1, spring-boot3-starter).

Assisted-by: AI coding agent